fix Java OPTS